--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,6 @@ ul {
 .header {
   background: #ffffff;
   border-bottom: 1px solid #ececec;
-  padding-bottom: 25px;
-  padding-top: 24px;
 }
 .header nav {
   display: flex;
@@ -78,14 +76,24 @@ ul {
   letter-spacing: 0.02em;
   color: var(--two-text-color);
   display: block;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  position: relative;
 }
 
 .navigation-menu li a:hover,
 .navigation-menu li a:focus {
   color: #2196f3;
   transition: 0.8s;
+}
+.navigation-menu li .current::after {
+  content: "";
+  background-color: #2196f3;
+  width: 100%;
+  height: 4px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
 }
 .header-contact {
   display: flex;
@@ -205,6 +213,26 @@ ul {
 .us-work-img ul {
   display: flex;
   margin-top: 50px;
+}
+.us-work-img ul li {
+  position: relative;
+}
+.us-work-txt-card {
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(47, 48, 58, 0.8);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 27px;
+  padding-bottom: 27px;
+}
+.us-work-txt-card p {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.17;
 }
 .us-work-img ul li + li {
   margin-left: 30px;
@@ -405,15 +433,36 @@ ul {
   width: 370px;
   background: #fff;
   border: 1px solid #eeeeee;
+  transition: 250ms;
 }
 .portfolio-card a {
   text-decoration: none;
 }
+.portfolio-card-img-comteiner {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-card-hover-txt {
+  position: absolute;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.55;
+  top: 0;
+  left: 0;
+  background-color: #2196f3;
+  padding: 63px 24px;
+  height: 100%;
+  transform: translateY(100%);
+  transition: 250ms;
+}
 .portfolio-card:hover,
 .portfolio-card:focus {
-  transition: 250ms;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-card:hover .portfolio-card-hover-txt,
+.portfolio-card a:focus .portfolio-card-hover-txt {
+  transform: translateY(0);
 }
 .portfolio-card img {
   display: block;
@@ -517,4 +566,24 @@ address ul li a:focus:focus {
 }
 .footer-conteiner-link svg {
   fill: #fff;
+}
+.backdrop {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.modal {
+  min-width: 518px;
+  min-height: 581px;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
 }
