--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,10 @@ ul {
   position: relative;
 }
 
-.navigation-menu li a:hover,
-.navigation-menu li a:focus {
+.navigation-menu li :hover,
+.navigation-menu li :focus {
   color: #2196f3;
-  transition: 0.8s;
+  transition: 250ms;
 }
 .navigation-menu li .current::after {
   content: "";
@@ -127,7 +127,7 @@ ul {
 .header-contact li a:hover,
 .header-contact li a:focus {
   color: #2196f3;
-  transition: 0.8s;
+  transition: 250ms;
 }
 .top-main {
   background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -138,7 +138,7 @@ ul {
   max-width: 1600px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: content;
+  background-size: cover;
 }
 .top-main h1 {
   color: var(--main-title-color);
@@ -326,13 +326,13 @@ ul {
 .wrap-us-team-icon a:hover,
 .wrap-us-team-icon a:focus {
   background-color: #2196f3;
-  transition: 700ms;
+  transition: 250ms;
 }
 
 .wrap-us-team-icon a:hover svg,
 .wrap-us-team-icon a:focus svg {
   fill: #fff;
-  transition: 700ms;
+  transition: 250ms;
 }
 
 /* ------------------us-clients */
@@ -367,12 +367,12 @@ ul {
 .us-clients-container a:hover,
 .us-clients-container a:focus {
   border-color: #2196f3;
-  transition: 700ms;
+  transition: 250ms;
   outline: none;
 }
 .us-clients-container a:hover svg,
 .us-clients-container a:focus svg {
-  transition: 700ms;
+  transition: 250ms;
   fill: #2196f3;
   outline: none;
 }
@@ -412,7 +412,7 @@ ul {
 .portfolio-button:hover,
 .portfolio-button:focus {
   background-color: #2196f3;
-  transition: 0.6s;
+  transition: 250ms;
   color: #fff;
 }
 .container-portfolio-card {
@@ -533,7 +533,7 @@ address ul li:nth-child(1) > a {
 }
 address ul li a:hover,
 address ul li a:focus:focus {
-  transition: 0.8s;
+  transition: 250ms;
   color: #fff;
 }
 .footer-box-link {
@@ -565,7 +565,7 @@ address ul li a:focus:focus {
 .footer-conteiner-link a:hover,
 .footer-conteiner-link a:focus {
   background-color: #2196f3;
-  transition: 700ms;
+  transition: 250ms;
 }
 .footer-conteiner-link svg {
   fill: #fff;
@@ -579,10 +579,9 @@ address ul li a:focus:focus {
   left: 0;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: scale(1);
 }
 .backdrop .is-hidden .modal {
-  transform: scale(1.5);
+  transform: scale(2);
 }
 .modal {
   min-width: 528px;
